--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,33 @@
 :root {
-  --color-primary: #34c94b;
-  --color-black: #121212;
-  --color-white: #ffffff;
+	/* Global variables to be defined here */
+	--color-primary: #34c94b;
+	--color-black: #121212;
+	--color-white: #ffffff;
 }
 
 *,
-*::after,
-*::before {
-  box-sizing: border-box;
+*::before,
+*::after {
+	box-sizing: border-box;
 }
 
+* {
+	margin: 0;
+}
 html,
 body {
-  height: 100%;
-}
-* {
-  margin: 0;
+	height: 100%;
+	margin: 0;
+	padding: 0;
 }
 
 body {
-  font-family: "Poppins", sans-serif;
-  line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
-  background-color: var(--color-black);
-  color: var(--color-white);
+	line-height: 1.5;
+	font-family: "Poppins", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	background-color: var(--color-black);
+	color: var(--color-white);
+	overflow-x: hidden;
 }
 
 img,
@@ -31,15 +35,17 @@ picture,
 video,
 canvas,
 svg {
-  display: block;
-  max-width: 100%;
+	display: block;
+	max-width: 100%;
 }
+
 input,
 button,
 textarea,
 select {
-  font: inherit;
+	font: inherit;
 }
+
 p,
 h1,
 h2,
@@ -47,9 +53,21 @@ h3,
 h4,
 h5,
 h6 {
-  overflow-wrap: break-word;
+	overflow-wrap: break-word;
 }
+
 #root,
 #__next {
-  isolation: isolate;
+	isolation: isolate;
+}
+
+.swiper-slide {
+	width: auto !important;
+}
+a,
+a:hover,
+a:focus,
+a:active{
+	text-decoration: none;
+	color: inherit;
 }
